--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -40,6 +40,9 @@ dependencies:
   just_audio: ^0.9.46
   amplify_flutter: ^2.6.1
   flutter_web_auth: ^0.6.0
+  amplify_auth_cognito: ^2.6.1
+  web: ^1.1.1
+  http: ^1.3.0
 
 dev_dependencies:
   flutter_test:
