--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -30,7 +30,7 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
-
+  http: 1.3.0  # Latest compatible version for Flutter Web
 
 
   # The following adds the Cupertino Icons font to your application.
@@ -42,7 +42,6 @@ dependencies:
   flutter_web_auth: ^0.6.0
   amplify_auth_cognito: ^2.6.1
   web: ^1.1.1
-  http: ^1.3.0
 
 dev_dependencies:
   flutter_test:
