redone all amplify

--- a/amplify/.config/project-config.json
+++ b/amplify/.config/project-config.json
@@ -1,6 +1,6 @@
 {
   "whyContinueWithGen1": "Prefer not to answer",
-  "projectName": "audioapp",
+  "projectName": "myaudioapp2",
   "version": "3.1",
   "frontend": "flutter",
   "flutter": {
