--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -42,6 +42,10 @@ dependencies:
   flutter_web_auth: ^0.6.0
   amplify_auth_cognito: ^2.6.1
   web: ^1.1.1
+  firebase_core: ^3.12.1
+  firebase_auth: ^5.5.1
+  cloud_firestore: ^5.6.5
+  firebase_storage: ^12.4.4
 
 dev_dependencies:
   flutter_test:
