--- a/amplify.yml
+++ b/amplify.yml
@@ -3,12 +3,13 @@ frontend:
   phases:
     preBuild:
       commands:
-        - sudo apt-get update -y
+        - echo "No system update needed"
         - sudo apt-get install -y unzip xz-utils curl git
         - curl -sSL https://storage.googleapis.com/flutter_infra_release/releases/stable/linux/flutter_linux_3.13.0-stable.tar.xz | tar -xJ
         - export PATH="$PWD/flutter/bin:$PATH"
         - flutter --version
         - flutter pub get
+       
     build:
       commands:
         - flutter build web
