--- a/amplify.yml
+++ b/amplify.yml
@@ -5,13 +5,9 @@ frontend:
       commands:
         - echo "No system update needed"
         - curl -sSL https://storage.googleapis.com/flutter_infra_release/releases/stable/linux/flutter_linux_3.29.2-stable.tar.xz | tar -xJ
-        - export PATH="$PWD/dart-sdk/dart-sdk/bin:$PWD/flutter/bin:$PATH"
-        - curl -sSL https://storage.googleapis.com/dart-archive/channels/stable/release/latest/sdk/dartsdk-linux-x64-release.zip -o dart-sdk.zip
-        - unzip dart-sdk.zip -d dart-sdk
-        - export PATH="$PWD/dart-sdk/dart-sdk/bin:$PWD/flutter/bin:$PATH"
-        - dart --version
-        - flutter doctor
+        - export PATH="$PWD/flutter/bin:$PATH"
         - flutter --version
+        - flutter doctor
         - flutter pub get
     build:
       commands:
