--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -99,3 +99,5 @@ flutter:
   #
   # For details regarding fonts from package dependencies,
   # see https://flutter.dev/to/font-from-package
+dependencies:
+  google_fonts: ^6.1.0
